# squaregrid

./: MANIFEST.in  README.md  setup.py
radii.egg-info/: PKG-INFO  SOURCES.txt
squaregrid/: build_location.py
squaregrid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
squaregrid/pyradii/: radii_calculations.py
squaregrid/radii/: CMakeLists.txt
squaregrid/radii/cmake/: FindCython.cmake  FindGRPC.cmake  ReplicateSourceTree.cmake  UseCython.cmake
squaregrid/radii/grids/: CMakeLists.txt  grid_metadata.cc  grid_metadata.h  pywrap_grid_metadata.pxd  pywrap_grid_metadata.pyx
squaregrid/radii/hexes/: calculate_radii.cpp  ellipse.ipynb  polygon.html  polygon.js
squaregrid/radii/primary/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  bin_radii.cc  bin_radii.py  bin_squares.py  calculate_brands.cc  calculate_radii.cc  calculate_radii_bin.cc  calculate_radii_objects.cc  calculate_traffic.cc  cmake_install.cmake  competitive_analysis.proto  competitive_analysis.pyx  data_mart_manager.cc  data_mart_manager.proto  geoscore.pyx  legacy_square_ids.cc  locality_size.pyx  make_data_mart.py  pzt_generator.proto  pzt_generator.pyx  pzt_legacy_code.py  square_info.proto  test_radii.py  upload_layer.pyx  write_squares.cc
squaregrid/radii/primary/grids/: CTestTestfile.cmake  Makefile  cmake_install.cmake
squaregrid/radii/primary/primary/: CTestTestfile.cmake  Makefile  cmake_install.cmake
squaregrid/radii/primary/processing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
squaregrid/radii/primary/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
squaregrid/radii/primary/utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
squaregrid/radii/processing/: CMakeLists.txt  data_grid.h  geocoder.proto  geocoder.py  grid_forming.h  pywrap_data_grid.pxd  pywrap_grid_forming.pxd  pywrap_radii_summation.pxd  radii_summation.h  radii_writer.h  table_creation.h  task.py
squaregrid/radii/templates/: competitive_analyser_index.html  geocoder_index.html  pzt_generator_index.html
squaregrid/radii/tests/: CMakeLists.txt  tests_main.cc
squaregrid/radii/tests/grids/: test_grid_metadata.cc
squaregrid/radii/tests/processing/: test_grid_forming.cc  test_radii_summation.cc
squaregrid/radii/utils/: CMakeLists.txt  common.h  datamart.proto  datamart.py  flask.py  geometry.h  helpers.h  logging.h  pywrap_common.pxd  pywrap_helpers.pxd
